FP-36: added stanbol to the integrated launcher